[tool.poetry]
name = "pip-audit-extra"
version = "0.0.1"
description = "Extended version of pip-audit"
authors = ["Kirill_Lekhov <kirill.lekhov@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
